Make Thumbnail disposable